# mesh

./: .gitignore  LICENSE  README.md  README_simic_brain.txt  notes.txt  pyproject.toml  quality.sh  requirements.txt  style.sh  template_version_1.6.yml  template_version_1.7.yml  template_version_1.8.yml
.github/workflows/: pytest.yml  tests.yml
config/: README.md  config-hpc.md  cubit-local-installation.md  deployment.md  dropbox.md  meshlab.md
data/: README.md
data/letter_f/: letter_f_slice_0.tif  letter_f_slice_2.tif
doc/: README.md  box_plots.py  box_plots_igea.py  boxyplots.py  bunny_mesh_refinement.md  hausdorff_distance.md  igea_mesh_refinement.md  introduction.md  npy_to_mesh.md  npy_to_mesh_part_2.md  npy_to_mesh_part_3.md  npy_to_mesh_part_4.md  octa_loop.md  sculpt-api.md  sculpt_spn_help.md  sculpt_stl_to_inp_schema.md  sphere_dcell_0010.yml  sphere_mesh_refinement.md  spherical_baseline.md
doc/RMU_all_hex_dec/: 2023-04-03-Mesh-negative-Jacobian.pptx  README.md  box_plots_rmu.py  inp_to_msj.yml
doc/T1_Utah_SCI_brain/: README.md  brain_cell_size_param.py  cell_050_050_050.yml  cell_050_msj.yml  cell_100_100_100.yml  cell_100_msj.yml  cell_size_1.0_2023-07-26_UTC_22_21_19_128992.yml  cell_size_1.0_2023-08-18_UTC_21_23_98_798212.yml  cell_size_1.5_2023-07-26_UTC_22_20_10_281341.yml  cell_size_2.0_2023-05-22_UTC_20_50_44_796321.yml  cell_size_2.0_l1_t3_p4_2023-07-04_UTC_20_16_12_620071.yml  cell_size_4.0_2023-05-22_UTC_20_50_44_795467.yml  cell_size_4.0_l1_t3_p4_2023-07-04_UTC_20_16_12_618736.yml  cell_size_8.0_2023-05-22_UTC_20_50_44_794153.yml  cell_size_8.0_l1_t3_p4_2023-07-04_UTC_20_16_12_617208.yml  csv_to_histogram_1d.py  stl_to_inp_cell_size_1.yml  stl_to_inp_cell_size_2.yml  stl_to_inp_cell_size_4.yml  stl_to_inp_cell_size_8.yml  stl_to_inp_cell_size_8_adapt.yml
doc/bunny_delta_cell/: cell_0010_inp_to_minsj_csv.yml  cell_0010_stl_to_inp.yml  cell_0020_inp_to_minsj_csv.yml  cell_0020_stl_to_inp.yml  cell_0040_inp_to_minsj_csv.yml  cell_0040_stl_to_inp.yml  cell_0080_inp_to_minsj_csv.yml  cell_0080_stl_to_inp.yml  cell_0160_inp_to_minsj_csv.yml  cell_0160_stl_to_inp.yml
doc/figs/: letter_f_spn_annotated.idraw  sphere_mod.idraw
doc/igea_delta_cell/: cell_0010_inp_to_minsj_csv.yml  cell_0010_stl_to_inp.yml  cell_0020_inp_to_minsj_csv.yml  cell_0020_stl_to_inp.yml  cell_0040_inp_to_minsj_csv.yml  cell_0040_stl_to_inp.yml  cell_0050_inp_to_minsj_csv.yml  cell_0050_stl_to_inp.yml  cell_0100_inp_to_minsj_csv.yml  cell_0100_stl_to_inp.yml
doc/one_quad/: README.md  one_quad.inp  one_quad_bowtie.inp  one_quad_extended.inp  one_quad_near_collapse.inp  (+5 more)
examples/: exemplar_boxplot.py  sensitivity.py  sensitivity_cbh.py  sensitivity_cbh_two.py  sphere_dcell_0010.yml  sphere_dcell_0100.yml  voxel_letter_f.py
src/: sculpt_stl_to_inp.py
tests/: scale_npy_to_mesh.py  test_command_line.py  test_cubit_delete_blocks.py  test_cubit_inp_to_minsj.py  test_cubit_inp_to_minsj_csv.py  test_fac_to_obj.py  test_hello.py  test_npy_to_mesh.py  test_sandbox.py  test_sculpt_stl_to_inp.py  test_utility.py  test_yml_to_dict.py
(+73 files in other folders)
