[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "atmesh"
version = "0.0.1"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
]
description = "mesh functionality for the autotwin workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/autotwin/mesh"
"Bug Tracker" = "https://github.com/autotwin/mesh/issues"
