# reference
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# PEP621
# https://peps.python.org/pep-0621/
#
# Python Packages
# https://py-pkgs.org/welcome


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "atmesh"
version = "0.0.4"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "autotwin workflow, mesh functionality"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black==22.6.0",
    "flake8",
    "matplotlib",
    "pytest",
    "pytest-cov"
]

[project.urls]
"Homepage" = "https://github.com/autotwin/mesh"
"Bug Tracker" = "https://github.com/autotwin/mesh/issues"
