# reference
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# PEP621
# https://peps.python.org/pep-0621/
#
# Python Packages
# https://py-pkgs.org/welcome


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atmesh"
version = "0.0.7"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "autotwin workflow, mesh functionality"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black==22.6.0",
    "flake8",
    "matplotlib",
    "numpy",
    "pdbp",
    "pytest",
    "pytest-cov",
    "pyyaml"
]

# Entry Points
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
atmesh="atmesh.command_line:atmesh"
atmeshinfo="atmesh.command_line:atmeshinfo"
version="atmesh.command_line:version"
cubit_inp_to_quality_csv="atmesh.cubit_inp_to_quality_csv:main"
# npy_to_mesh="atmesh.npy_to_mesh:main"
npy_to_mesh="atmesh.npy_to_mesh:main"
sculpt_stl_to_inp="atmesh.sculpt_stl_to_inp:main"

[project.urls]
"Homepage" = "https://github.com/autotwin/mesh"
"Bug Tracker" = "https://github.com/autotwin/mesh/issues"
